src/objects/Year__c.object
<CustomObject>
    <description>Object to store details of each year</description>
    <fields>
        <fullName>BeginDate__c</fullName>
        <description>The date the year begins</description>
        <label>Begin Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BeginTerm__c</fullName>
        <description>First term of the year</description>
        <label>Begin Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The last day of the year</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndTerm__c</fullName>
        <description>Last term of the year</description>
        <label>End Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingStartDate__c</fullName>
        <description>Date Processing in Aid Year began</description>
        <label>Processing Start Date</label>
        <type>Date</type>
    </fields>
    <label>Year</label>
    <listViews>
        <fullName>AidYears</fullName>
        <columns>NAME</columns>
        <columns>BeginDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>BeginTerm__c</columns>
        <columns>EndTerm__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Year__c.AidYear</value>
        </filters>
        <label>Aid Years</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Year Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Case_00Nf0000000OFd6EAG</fullName>
        <active>true</active>
        <field>Case.AidyYear__c</field>
        <filterItems>
            <field>Year__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Aid Year</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_Year</name>
    </namedFilters>
    <pluralLabel>Years</pluralLabel>
    <recordTypes>
        <fullName>AidYear</fullName>
        <active>true</active>
        <description>The aid year used for processing Financial Aid</description>
        <label>Aid Year</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>